--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item dashboard">
-                                    <a class="picframe" href="images/portfolio/2.jpg" title="Customer Churn" data-source="<iframe title="CustomerChurnData" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiNTVkYjc0M2ItZjRiZC00YjRlLWE2YjQtMzU5ZWYwZDQ0NDkzIiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&embedImagePlaceholder=true&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>">
+                                    <a class="picframe" href="images/portfolio/2.jpg" title="Bolo" data-source="https://themeforest.net/item/bolo-onepage-creative-website-template/25030305">
                                         <span class="overlay">
                                             <span class="d-title">Customer Churn</span>
                                         </span>
