--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
-                                <div class="item col-md-4 mb30 gallery-item dashboard filter1 mobile">
+                                <div class="item col-md-4 mb30 gallery-item  filter1 mobile">
                                     <a class="picframe" href="images/portfolio/4.jpg" title="Jonna" data-source="https://themeforest.net/item/jonna-personal-portfolio-website-template/26361888">
                                         <span class="overlay">
                                             <span class="d-title">Jonna</span>
@@ -403,7 +403,7 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
-                                <div class="item col-md-4 mb30 gallery-item dashboard mobile website">
+                                <div class="item col-md-4 mb30 gallery-item  mobile website">
                                     <a class="picframe" href="images/portfolio/5.jpg" title="Justica" data-source="https://themeforest.net/item/justica-lawyer-and-attorney-website-template/29485331">
                                         <span class="overlay">
                                             <span class="d-title">Justica</span>
