--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item dashboard">
-                                    <a class="picframe" href="images/portfolio/2.jpg" title="Bolo" data-source="https://app.powerbi.com/view?r=eyJrIjoiNTVkYjc0M2ItZjRiZC00YjRlLWE2YjQtMzU5ZWYwZDQ0NDkzIiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&embedImagePlaceholder=true&pageName=ReportSection">
+                                    <a class="picframe" href="images/portfolio/7d.jpg" title="CusChurn" data-source="https://app.powerbi.com/view?r=eyJrIjoiNTVkYjc0M2ItZjRiZC00YjRlLWE2YjQtMzU5ZWYwZDQ0NDkzIiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&embedImagePlaceholder=true&pageName=ReportSection">
                                         <span class="overlay">
                                             <span class="d-title">Customer Churn</span>
                                         </span>
