--- a/index.html
+++ b/index.html
@@ -383,6 +383,16 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
+                                <div class="item col-md-4 mb30 gallery-item dashboard">
+                                    <a class="picframe" href="images/portfolio/2b.jpg" title="CusChurn" data-source="https://app.powerbi.com/view?r=eyJrIjoiNTVkYjc0M2ItZjRiZC00YjRlLWE2YjQtMzU5ZWYwZDQ0NDkzIiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&embedImagePlaceholder=true&pageName=ReportSection11052c83e31117dca765">
+                                        <span class="overlay">
+                                            <span class="d-title">Customer Churn 2</span>
+                                        </span>
+                                        <img src="images/portfolio/2b.jpg" alt="" />
+                                    </a>
+                                </div>
+                                <!-- close gallery item -->
+                                <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item filter1">
                                     <a class="picframe" href="images/portfolio/3.jpg" title="Elaxo" data-source="https://themeforest.net/item/elaxo-app-and-software-website-template/29226060">
                                         <span class="overlay">
