edit to index page portfolio section

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <div class="col-md-12 text-center wow fadeInRight" data-wow-delay=".25s">
                             <ul id="filters">
                                 <li><a href="#" data-filter="*" id="btn_all" class="selected">all projects</a></li>
-                                <li><a href="#" data-filter=".python">filter1</a></li>
+                                <li><a href="#" data-filter=".python">python</a></li>
                                 <li><a href="#" data-filter=".mobile">mobile</a></li>
                                 <li><a href="#" data-filter=".dashboard">Dashboards</a></li>
                                 <li><a href="#" data-filter=".website">website</a></li>
@@ -364,7 +364,7 @@
                             <div id="gallery" class="gallery full-gallery de-gallery zoom-gallery row sequence wow fadeInRight" data-wow-delay=".5s">
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item python website" data-value="project-details-image.html">
-                                    <a class="picframe" href="images/portfolio/jupyter_map.jpg" title="Exhibiz" data-source="all_maps_folium.html">
+                                    <a class="picframe" href="images/portfolio/jupyter_map.jpg" title="Interactive maps using Jupyter Notebook" data-source="all_maps_folium.html">
                                         <span class="overlay">
                                             <span class="d-title">Interactive maps using Jupyter Notebook</span>
                                         </span>
