adding page from SB repo

--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
-                                <div class="item col-md-4 mb30 gallery-item mobile website">
-                                    <a class="picframe" href="images/portfolio/6.jpg" title="Bluetec" data-source="https://themeforest.net/item/bluetec-saas-it-software-startup-landing-page-template/27106031">
+                                <div class="item col-md-4 mb30 gallery-item python">
+                                    <a class="picframe" href="images/portfolio/6.jpg" title="Bluetec" data-source="https://github.com/EpsilonZulu/Starbucks_Locations/blob/main/Starbucks_potential_locations.html">
                                         <span class="overlay">
-                                            <span class="d-title">Bluetec</span>
+                                            <span class="d-title">Starbucks Potential Locations</span>
                                         </span>
                                         <img src="images/portfolio/6.jpg" alt="" />
                                     </a>
