--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item python">
-                                    <a class="picframe" href="images/portfolio/6.jpg" title="Bluetec" data-source="https://github.com/EpsilonZulu/Starbucks_Locations/blob/main/Starbucks_potential_locations.html">
+                                    <a class="picframe" href="images/portfolio/6.jpg" title="Bluetec" data-source="Starbucks_potential_locations.html">
                                         <span class="overlay">
                                             <span class="d-title">Starbucks Potential Locations</span>
                                         </span>
