added SB location page

--- a/Starbucks_potential_locations.html
+++ b/Starbucks_potential_locations.html
@@ -25930,10 +25930,23 @@ Using the <code>ESPG 4326</code> for coordinates in latitude &amp; longitude</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>This notebook is modified after the <code>Geospatial Analysis</code> course from Kaggle 
-The data sets used are obtaained from Kaggle as well</p>
-<p><a href="https://www.kaggle.com/code/alexisbcook/manipulating-geospatial-data/tutorial">https://www.kaggle.com/code/alexisbcook/manipulating-geospatial-data/tutorial</a>
-<a href="https://www.kaggle.com/learn/geospatial-analysis">https://www.kaggle.com/learn/geospatial-analysis</a></p>
+<p>This notebook is modified after the <code>Geospatial Analysis</code> course from Kaggle</p>
+<p><a href="https://www.kaggle.com/code/alexisbcook/manipulating-geospatial-data/tutorial">https://www.kaggle.com/code/alexisbcook/manipulating-geospatial-data/tutorial</a></p>
+<p>The data sets used are obtaained from Kaggle as well</p>
+<p><a href="https://www.kaggle.com/learn/geospatial-analysis">https://www.kaggle.com/learn/geospatial-analysis</a></p>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Link to my repository hosting the project</p>
+<p><a href="https://github.com/EpsilonZulu/Starbucks_Locations">https://github.com/EpsilonZulu/Starbucks_Locations</a></p>
 
 </div>
 </div>
