added covid dash

--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
-                                <div class="item col-md-4 mb30 gallery-item filter1">
-                                    <a class="picframe" href="images/portfolio/3.jpg" title="Elaxo" data-source="https://themeforest.net/item/elaxo-app-and-software-website-template/29226060">
+                                <div class="item col-md-4 mb30 gallery-item dashboard">
+                                    <a class="picframe" href="images/portfolio/3.jpg" title="Covid Dashboard" data-source="<iframe title="Covid_Dark" width="600" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiMWY0OTJiZGItN2JjOS00MTY2LWEwZTctZjIzMDFhNDBkMjI3IiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&pageName=ReportSection835d6f254bf857eb0bff" frameborder="0" allowFullScreen="true"></iframe>">
                                         <span class="overlay">
-                                            <span class="d-title">Elaxo</span>
+                                            <span class="d-title">Covid Dashboard</span>
                                         </span>
                                         <img src="images/portfolio/3.jpg" alt="" />
                                     </a>
