--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item dashboard">
-                                    <a class="picframe" href="images/portfolio/3.jpg" title="Covid Dashboard" data-source="<iframe title="Covid_Dark" width="600" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiMWY0OTJiZGItN2JjOS00MTY2LWEwZTctZjIzMDFhNDBkMjI3IiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&pageName=ReportSection835d6f254bf857eb0bff" frameborder="0" allowFullScreen="true"></iframe>">
+                                    <a class="picframe" href="images/portfolio/3.jpg" title="Covid Dashboard" data-source="https://app.powerbi.com/view?r=eyJrIjoiMWY0OTJiZGItN2JjOS00MTY2LWEwZTctZjIzMDFhNDBkMjI3IiwidCI6ImQwNDNmYTFhLTE5NDQtNDE4Zi1iODNiLTY1MzQxMzg5YzJhMCJ9&pageName=ReportSection835d6f254bf857eb0bff">
                                         <span class="overlay">
                                             <span class="d-title">Covid Dashboard</span>
                                         </span>
