--- a/index.html
+++ b/index.html
@@ -648,9 +648,7 @@
                         <input type="text" name="_honey" style="display: none;">
                         -->
                         <!--Disable Captcha-->
-                        <!--
-                            <input type="hidden" name="_captcha" value="false">
-                         -->
+                        <!--<input type="hidden" name="_captcha" value="false">-->
                         <div class="col-md-6">
                             <div class="field-set">
                                 <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" />
@@ -660,10 +658,11 @@
                                 <input type="text" name="email" id="email" class="form-control" placeholder="Your Email" />
                                 <div class="line-fx"></div>
                             </div>
+                            <!--
                             <div class="field-set">
                                 <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone" />
                                 <div class="line-fx"></div>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="col-md-6">
                             <div class="field-set">
