--- a/index.html
+++ b/index.html
@@ -636,50 +636,25 @@
             <!--Contact section begin -->
             <section id="section-contact" class="dark">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 wow fadeInRight">
-                            <h4 class="title">I'm available for hire</h4>
-                            <h2 class="title">Contact Me</h2>
-                            <div class="title-underline"></div>
+                    <h1>FormSubmit Demo</h1>
+                    <form target="_blank" action="https://formsubmit.co/ammad.mian.88@gmail.com" method="POST">
+                      <div class="form-group">
+                        <div class="form-row">
+                          <div class="col">
+                            <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                          </div>
+                          <div class="col">
+                            <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+                          </div>
                         </div>
-                    </div>
-                    <form name="contactForm" id="contact_form" class="row form-default wow fadeInRight" data-wow-delay=".25s" action="https://formsubmit.co/ammad.mian.88@gmail.com" method="POST">
-                        <!--Honey trap for spam
-                        <input type="text" name="_honey" style="display: none;">
-                        -->
-                        <!--Disable Captcha-->
-                        <!--<input type="hidden" name="_captcha" value="false">-->
-                        <div class="col-md-6">
-                            <div class="field-set">
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" />
-                                <div class="line-fx"></div>
-                            </div>
-                            <div class="field-set">
-                                <input type="text" name="email" id="email" class="form-control" placeholder="Your Email" />
-                                <div class="line-fx"></div>
-                            </div>
-                            <!--
-                            <div class="field-set">
-                                <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone" />
-                                <div class="line-fx"></div>
-                            </div>-->
-                        </div>
-                        <div class="col-md-6">
-                            <div class="field-set">
-                                <textarea name="message" id="message" class="form-control" placeholder="Your Message"></textarea>
-                                <div class="line-fx"></div>
-                            </div>
-                        </div>
-                        <div class="spacer-single"></div>
-                        <div class="col-md-12 text-center">
-                            <div id="submit">
-                                <input type="submit" id="send_message" value="Send" class="btn btn-custom color-2" />
-                            </div>
-                            <div id="mail_success" class="success">Your message has been sent successfully.</div>
-                            <div id="mail_fail" class="error">Sorry, error occured this time sending your message.</div>
-                        </div>
+                      </div>
+                      <div class="form-group">
+                        <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
                     </form>
-                </div>
+                  </div>
+                
             </section>
         </div>
         <!-- content close -->
