--- a/index.html
+++ b/index.html
@@ -654,26 +654,23 @@
                                     <input type="text" name="email" id="email" class="form-control" placeholder="Your Email" />
                                     <div class="line-fx"></div>
                                 </div>
-                                <!--
-                                <div class="field-set">
-                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone" />
-                                    <div class="line-fx"></div>
-                                </div>-->
                             </div>
                             <div class="col-md-6">
                                 <div class="field-set">
                                     <textarea name="message" id="message" class="form-control" placeholder="Your Message"></textarea>
-                                    <div class="line-fx"></div>
+                                <div class="line-fx"></div>
                                 </div>
                             </div>
                             <div class="spacer-single"></div>
-                            <div class="col-md-12 text-center">
-                                <div id="submit">
-                                    <input type="submit" id="send_message" value="Send" class="btn btn-custom color-2" />
+                                <div class="col-md-12 text-center">
+                                    <div id="submit">
+                                        <button type="submit" id="send_message" value="Send Message" class="btn-custom light wow fadeInRight">Send Message</button>
+                                    </div>
+                                    <div id="mail_success" class="success">Your message has been sent successfully.</div>
+                                    <div id="mail_fail" class="error">Sorry, error occured this time sending your message.</div>
                                 </div>
-                                <div id="mail_success" class="success">Your message has been sent successfully.</div>
-                                <div id="mail_fail" class="error">Sorry, error occured this time sending your message.</div>
                             </div>
+                        </form>
                     </div>    
                 </div>
                 
