--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                         </div>
                     </div>
                     <div class="col-md-12 text-center">
-                        <form name="contactForm" id="contact_form" class="row form-default wow fadeInRight" data-wow-delay=".25s" action="https://formsubmit.co/ammad.mian.88@gmail.com" method="POST">
+                        <form name="contactForm" id="contact_form" class="row form-default wow fadeInRight" target="_blank" action="https://formsubmit.co/ammad.mian.88@gmail.com" method="POST">
                             <div class="col-md-4">
                                 <div class="field-set">
                                     <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" />
