--- a/index.html
+++ b/index.html
@@ -644,26 +644,23 @@
                         </div>
                     </div>
                     <div class="col-md-12 text-center">
-                        <form name="contactForm" id="contact_form" class="row form-default wow fadeInRight" target="_blank" action="https://formsubmit.co/ammad.mian.88@gmail.com" method="POST">
-                            <div class="col-md-4">
-                                <div class="field-set">
-                                    <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" />
-                                    <div class="line-fx"></div>
+                        <form target="_blank" action="https://formsubmit.co/4d2a2b96ffda0f10dfe098b428e7ecad" method="POST">
+                            <div class="form-group">
+                              <div class="form-row">
+                                <div class="col">
+                                  <input type="text" name="name" class="form-control" placeholder="Full Name" required>
                                 </div>
-                                <div class="field-set">
-                                    <input type="text" name="email" id="email" class="form-control" placeholder="Your Email" />
-                                    <div class="line-fx"></div>
+                                <div class="col">
+                                  <input type="email" name="email" class="form-control" placeholder="Email Address" required>
                                 </div>
+                              </div>
                             </div>
-                            <div class="col-md-8">
-                                <div class="field-set">
-                                    <textarea name="message" id="message" class="form-control" placeholder="Your Message"></textarea>
-                                <div class="line-fx"></div>
-                                </div>
+                            <div class="form-group">
+                              <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
                             </div>
-                            <div class="spacer-single"></div>
-                            <button type="submit" id="send_message" value="Send Message" class="btn-custom light wow fadeInRight">Send Message</button>
-                        </form>
+                            <button type="submit" class="btn btn-lg btn-dark btn-block">Send Message</button>
+                          </form>
+                        </div>
                     </div>    
                 </div>
                 
