updated portfolio section
added witcher project

--- a/index.html
+++ b/index.html
@@ -468,12 +468,12 @@
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
-                                <div class="item col-md-4 mb30 gallery-item  ">
-                                    <a class="picframe" href="images/portfolio/5.jpg" title="Justica" data-source="https://themeforest.net/item/justica-lawyer-and-attorney-website-template/29485331">
+                                <div class="item col-md-4 mb30 gallery-item python">
+                                    <a class="picframe" href="images/portfolio/community.png" title="Community detection" data-source="https://nbviewer.org/github/AmmadDSA/The_Witcher/blob/main/character_map.ipynb" style="height:250px;width:350px">
                                         <span class="overlay">
-                                            <span class="d-title">Justica</span>
+                                            <span class="d-title">Web Scrapping and Network detection in python.</span>
                                         </span>
-                                        <img src="images/portfolio/5.jpg" alt="" />
+                                        <img src="images/portfolio/community.png" alt="" />
                                     </a>
                                 </div>
                                 <!-- close gallery item -->
