--- a/blog_auto_compare.html
+++ b/blog_auto_compare.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Ammad's Blog - What is Automation</title>
+    <title>Jordis - Responsive Bootstrap 4 Personal Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="keywords" />
