--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 I have a proven track record of delivering valuable insights and recommendations in the emerging AI space.  My expertise spans the entire automation lifecycle: from meticulously mapping existing processes to identifying high-impact opportunities, and 
                                 finally, designing and integrating automation solutions that align with overarching business objectives.</p>
                             <div class="spacer-single"></div>
-                            <a href="https://drive.google.com/file/d/1MNLEyWHp96C2P7xym93loN5WSE45Uxuj/view?usp=share_link" class="btn-custom light wow fadeInRight scoll-to" data-wow-delay=".6s" >Download CV</a>
+                            <!-- <a href="https://drive.google.com/file/d/1MNLEyWHp96C2P7xym93loN5WSE45Uxuj/view?usp=share_link" class="btn-custom light wow fadeInRight scoll-to" data-wow-delay=".6s" >Download CV</a> -->
                         </div>
 
                         <div class="col-md-6 sm-hide"><blockquote class="text-light pull-right wow fadeInRight" data-wow-delay=".6s">Leveraging AI & Data for a Smarter Future.</blockquote></div>
