--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </div>
                             <div class="align-self-center ml-auto header-col-right">
                                 <div class="social-icons s-border sm-hide">
-                                    <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-twitter fa-lg"></i></a> -->
                                     <a href="https://www.linkedin.com/in/mian-ammad/"><i class="fa fa-linkedin fa-lg"></i></a>
                                     <a href="https://github.com/AmmadDSA"><i class="fa fa-github fa-lg"></i></a>
                                 </div>
