update contact anchor

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <li></li>
                                     <li><a href="#section-blog">Blog</a></li>
                                     <li></li>
-                                    <li><a href="#section-contact">Contact</a></li>
+                                    <li><a href="mailto:ammad.mian.88@gmail.com?subject=Reaching out from your porfolio website">Contact</a></li>
                                     <li></li>
                                 </ul>
                                 <!-- mainmenu close -->
