--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                                 </div> -->
                             </div>
                         </div>
+                    <!-- soft skills -->
                         <div class="col-md-6">
                             <h3 class="s_border">Soft Skills</h3>
                             <!-- <div class="skill-bar">
@@ -475,7 +476,6 @@
                                     <li><a href="#" data-filter=".automation">Automations</a></li>
                                 </ul>
                             <div id="gallery" class="gallery full-gallery de-gallery zoom-gallery row sequence wow fadeInRight" data-wow-delay=".5s">
-
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item automation" data-value="project-details-image.html">
                                     <a class="picframe" href="images/portfolio/zapier-ghl.jpg" title="Zapier & GHL automations" data-source='https://www.dropbox.com/scl/fi/02or7d8t6mtbv9fltr6l0/Zapier-and-GHL.mp4?rlkey=he6y509h2x4tvoe2b1d42r0c9&dl=0' style="height:250px;width:350px">
@@ -489,23 +489,23 @@
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item automation" data-value="project-details-image.html">
-                                    <a class="picframe" href="images/portfolio/zapier-ghl.jpg" title="Zapier & GHL automations" data-source='images\\videos\\' style="height:250px;width:350px">
+                                    <a class="picframe" href="images/portfolio/chatbot.jpg" title="Customized ChatBots using ChatGPT and LangChain" data-source='https://www.dropbox.com/scl/fi/6i2v90q0ohzriz01jgkkj/Custom-Chatbot.mp4?rlkey=qmsq29gq2zwb4wn016vljdi7a&dl=0' style="height:250px;width:350px">
                                         <!-- onclick="playVideo('images\\videos\\Zapier and GHL.mp4')" -->
                                         <span class="overlay">
                                             <span class="d-title">AI powered custom Chatbot</span>
                                         </span>
-                                        <img src="images/portfolio/zapier-ghl.jpg" alt="" />
+                                        <img src="images/portfolio/chatbot.jpg" alt="" />
                                     </a>
                                 </div>
                                 <!-- close gallery item -->
                                 <!-- gallery item -->
                                 <div class="item col-md-4 mb30 gallery-item automation" data-value="project-details-image.html">
-                                    <a class="picframe" href="images/portfolio/zapier-ghl.jpg" title="Zapier & GHL automations" data-source='images\\videos\\' style="height:250px;width:350px">
+                                    <a class="picframe" href="images/portfolio/make-flow.png" title="Make & Clikup Automation" data-source='https://www.dropbox.com/scl/fo/phi8cxd4620auv1ek5nds/h?rlkey=89acm91js5hswigpigekxijoe&dl=0' style="height:250px;width:350px">
                                         <!-- onclick="playVideo('images\\videos\\Zapier and GHL.mp4')" -->
                                         <span class="overlay">
-                                            <span class="d-title">Automations using Zapier and GoHighLevel</span>
+                                            <span class="d-title">Make and Clickup Automation</span>
                                         </span>
-                                        <img src="images/portfolio/zapier-ghl.jpg" alt="" />
+                                        <img src="images/portfolio/make-flow.png" alt="" />
                                     </a>
                                 </div>
                                 <!-- close gallery item -->
